<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="3dp"
   >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        app:cardCornerRadius="2dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawSelectorOnTop="true"
                    android:orientation="vertical"
                    android:id="@+id/layout"
                    android:padding="3dp">

                <LinearLayout
                    android:id="@+id/headerLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                        <ImageView
                            android:id="@+id/picture"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="#000"
                            android:fitsSystemWindows="true"
                            android:scaleType="fitCenter"
                            android:adjustViewBounds="true"
                            app:layout_collapseMode="parallax" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="2dp"
                    android:layout_marginTop="20dp"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/name"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:gravity="right"
                        android:textSize="12sp" />


                    <TextView
                        android:id="@+id/name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="left"
                        android:layout_marginStart="10dp"
                        android:paddingLeft="5dp"
                        android:textStyle="bold"
                        android:textColor="@color/app_color"
                        android:textSize="12sp" />
                </LinearLayout>





                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="2dp"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:gravity="right"
                        android:text="@string/State"
                        android:textSize="12sp" />


                    <TextView
                        android:id="@+id/status"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="left"
                        android:layout_marginStart="10dp"
                        android:paddingLeft="5dp"
                        android:textStyle="bold"
                        android:textColor="@color/app_color"
                        android:textSize="12sp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="2dp"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:gravity="right"
                        android:text="@string/species"
                        android:textSize="12sp" />


                    <TextView
                        android:id="@+id/species"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="left"
                        android:layout_marginStart="10dp"
                        android:paddingLeft="5dp"
                        android:textStyle="bold"
                        android:textColor="@color/app_color"
                        android:textSize="12sp" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="2dp"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:gravity="right"
                        android:text="@string/gender"
                        android:textSize="12sp" />


                    <TextView
                        android:id="@+id/gender"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="left"
                        android:layout_marginStart="10dp"
                        android:paddingLeft="5dp"
                        android:textStyle="bold"
                        android:textColor="@color/app_color"
                        android:textSize="12sp" />
                </LinearLayout>



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="2dp"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:gravity="right"
                        android:text="@string/date"
                        android:textSize="12sp" />


                    <TextView
                        android:id="@+id/date"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="left"
                        android:layout_marginStart="10dp"
                        android:paddingLeft="5dp"
                        android:textStyle="bold"
                        android:textColor="@color/app_color"
                        android:textSize="12sp" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="2dp"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:gravity="right"
                        android:text="@string/location"
                        android:textSize="12sp" />


                    <TextView
                        android:id="@+id/nameLocation"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="left"
                        android:layout_marginStart="10dp"
                        android:paddingLeft="5dp"
                        android:textStyle="bold"
                        android:textColor="@color/app_color"
                        android:textSize="12sp" />
                </LinearLayout>















                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="2dp"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:gravity="right"
                        android:text="@string/origin"
                        android:textSize="12sp" />


                    <TextView
                        android:id="@+id/nameOrigin"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="left"
                        android:layout_marginStart="10dp"
                        android:paddingLeft="5dp"
                        android:textStyle="bold"
                        android:textColor="@color/app_color"
                        android:textSize="12sp" />
                </LinearLayout>

            </LinearLayout>

            <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:visibility="gone"/>


        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>